tambah template untuk lihat detail produk plus fungsi buat order

--- a/template/order.html
+++ b/template/order.html
@@ -34,6 +34,10 @@
 			});
 			calculateItemPrice(this);
 		});
+		$('#order-modal').modal({
+			backdrop : 'static',
+			keyboard : false
+		});
 
 		var mainTable = $('#main-order-list');
 		calculateTotalPrice(mainTable);
