udah bisa terima reservasi, asset udah ok, kurang email.

--- a/guesthouse.cupumanik.id/cupumanik-guesthouse.css
+++ b/guesthouse.cupumanik.id/cupumanik-guesthouse.css
@@ -194,17 +194,17 @@ time.icon span {
 }
 
 #banner-1 {
-	background: url('../images/LM-EAST-NIGHT.jpg') no-repeat center fixed;
+	background: url('../images/banner-1.jpg') no-repeat center fixed;
 	background-size: cover;
 }
 
 #banner-2 {
-	background: url('../images/LM-EAST-NIGHT.jpg') no-repeat center fixed;
+	background: url('../images/banner-2.jpg') no-repeat center fixed;
 	background-size: cover;
 }
 
 #banner-3 {
-	background: url('../images/LM-EAST-NIGHT.jpg') no-repeat center fixed;
+	background: url('../images/banner-3.jpg') no-repeat center fixed;
 	background-size: cover;
 }
 
