--- a/furniture.cupumanik.id/cupumanik-furniture.css
+++ b/furniture.cupumanik.id/cupumanik-furniture.css
@@ -79,17 +79,17 @@ body
 }
 
 #banner-1 {
-	background: url('../images/batik1.png') no-repeat center fixed;
+	background: url('../images/banner-1.jpg') no-repeat center fixed;
 	background-size: cover;
 }
 
 #banner-2 {
-	background: url('../images/batik2.png') no-repeat center fixed;
+	background: url('../images/banner-2.jpg') no-repeat center fixed;
 	background-size: cover;
 }
 
 #banner-3 {
-	background: url('../images/batik3.png') no-repeat center fixed;
+	background: url('../images/banner-3.jpg') no-repeat center fixed;
 	background-size: cover;
 }
 
