--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,14 @@ body {
 
 .list {
 	list-style: none;
+	padding-left: 0px;
+	padding-right: 0px;
+	min-width: 100%;
 }
 
 .list li {
 	display: inline;
+	position: relative;
 }
 
 .aboutdiv {
@@ -72,7 +76,7 @@ body {
 	font-size: 16px;
 	border-bottom: 2px solid lightgrey;
 	padding-bottom: 2%;
-	margin-right: 2%;
+	right: 5%;
 	color: black;
 }
 
@@ -82,7 +86,7 @@ body {
 }
 
 .menu .list {
-	min-width: 103%;
+	min-width: 100%;
 }
 
 .menu p {
@@ -125,7 +129,7 @@ body {
 	background: linear-gradient(lightgrey, white, white, white);
 	min-height: 100%;
 	min-width: 100%;
-	overflow: hidden;
+	padding-right: 0px;
 	position: absolute;
 }
 
@@ -173,7 +177,7 @@ body {
 	bottom: 0%;
 	right: 0%;
 	text-align: center;
-	position: fixed;
+	position: absolute;
 	left: 50%;
 }
 
@@ -227,11 +231,12 @@ body {
 	position: fixed;
 	color: black;
 	top: 2%;
-	right: 0;
+	right: 5px;
 	z-index: 5;
+	padding-right: 5px;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 640px) {
 	.menu .link {	
 		font-size: 11px;
 	}
@@ -243,7 +248,7 @@ body {
 		text-align: center;
 	}
 	.submain {
-		left: -35%;
+		left: -25%;
 	}
 	.header {
 		left: 35%;
@@ -252,7 +257,7 @@ body {
 		right: 0;
 	}
 	.subheader {
-		left: -35%;
+		left: -50%;
 		max-height: 75px;
 	}
 	.content {
@@ -264,7 +269,7 @@ body {
 	}
 	.column {
 		max-width: 33.5%;
-		display: inline-table;
+		display: inline-block;
 		right: 0;
 		margin-right: -1%;
 		left: 0;
@@ -278,13 +283,19 @@ body {
 	}
 }
 
-@media only screen and (min-width:768px) and (max-width:1024px) {
+@media only screen and (min-width:600px) and (max-width:900px) {
+	.logo{
+		height: 75%;
+	}
+	.content{
+		left: 50%;
+	}
 	.submain .list li {
 		display: block;
 		text-align: center;
 	}
 	.submain .link {
-		font-size: 30px;
+		font-size: 20px;
 	}
 	.submain {
 		left: -65%;
@@ -292,16 +303,17 @@ body {
 	.header {
 		left: 50%;
 		right: 0;
-		margin-top: 7.5%;
+		margin-top: 5%;
 		right: 0;
 	}
 	.subheader {
+	
 		left: -50%;
 		max-height: 75px;
 	}
 	.column {
 		max-width: 33.5%;
-		display: inline-table;
+		display: inline-block;
 		right: 0;
 		margin-right: -1%;
 		left: 0;
@@ -309,7 +321,7 @@ body {
 		padding: 0;
 	}
 	.preview {
-		top: 60%;
+		top: 53%;
 		min-height: 25%;
 		max-height: 50%;
 	}
